Email Firefox Fix (mobile vertical align missing)

--- a/src/components/EmailForm.module.css
+++ b/src/components/EmailForm.module.css
@@ -4,19 +4,51 @@
   margin-bottom: calc(var(--base-font-size) * 4);
   display: flex;
   padding: calc(var(--base-font-size) * 0.5) var(--base-font-size);
+  height: 40px;
+}
+
+.inputgroup {
+  position: relative;
+  padding: 0;
+  width: calc(var(--base-font-size) * 17);
+  border-radius: 10px;
+  background-color: #f4f4f4;
+  height: 100%;
 }
 
 .input {
+  position: relative;
   display: block;
   font-family: 'Satoshi-Regular';
   font-size: var(--base-font-size);
   font-weight: 400;
   color: #767676;
-  background-color: #f4f4f4;
+  background-color: transparent;
   border: none;
   outline: none;
-  padding: 0;
-  width: calc(var(--base-font-size) * 17);
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+.input:valid + p {
+  display: none;
+}
+
+.placeholder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-family: 'Satoshi-Regular';
+  font-size: var(--base-font-size);
+  font-weight: 400;
+  color: #767676;
+  background-color: #f4f4f4;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  cursor: default;
+  line-height: 43px;
 }
 
 .submit {
@@ -38,45 +70,32 @@
     justify-content: center;
     flex-wrap: wrap;
     padding: 0;
+    height: 100px;
+  }
+
+  .inputgroup {
+    height: 50px;
+    width: 100%;
   }
 
   .input {
-    height: 50px;
-    width: calc(var(--base-font-size) * 10);
+    width: 100%;
     margin: 0;
-    padding-bottom: 8px;
     text-align: center;
   }
 
-  ::-webkit-input-placeholder {
-    /* Chrome/Opera/Safari */
-    white-space: pre-line;
-    position: relative;
-    top: -6px;
-  }
-  ::-moz-placeholder {
-    /* Firefox 19+ */
-    white-space: pre-line;
-    position: relative;
-    top: -6px;
-  }
-  :-ms-input-placeholder {
-    /* IE 10+ */
-    white-space: pre-line;
-    position: relative;
-    top: -6px;
-  }
-  :-moz-placeholder {
-    /* Firefox 18- */
-    white-space: pre-line;
-    position: relative;
-    top: -6px;
+  .placeholder {
+    width: 100%;
+    text-align: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    line-height: 24px;
   }
 
   .submit {
     width: 100%;
+    height: 50px;
     margin: 0;
-    padding: calc(var(--base-font-size) * 1) calc(var(--base-font-size) * 2);
     border-top-left-radius: 0;
     border-top-right-radius: 0;
   }
